tests/ui/or_value_no_comparison.stderr
Error [E0110]: the right side of `||` must be Bool (true or false), but this is Int (a whole number)
  --> tests/ui/or_value_no_comparison.lex:3:22
    |
  3 |     val x = ready || 5;
    |                      ^
 Why: right after a comparison, a plain value repeats it (`x == 1 || 2` means `x == 1 || x == 2`, S25) — but there's no comparison before this one
 Fix: compare the value to something, e.g. `x == 2`
