tests/ui/or_value_no_comparison.jet
fn main() {
    val ready = true;
    val x = ready || 5;
    print(x);
}
